

PROJECT(pg_graph)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET (VERSION_MAJOR "0")
SET (VERSION_MINOR "1")
SET (VERSION_PATCH "0")
SET (VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

FIND_PACKAGE(PQXX REQUIRED)

# SET(Boost_USE_STATIC_LIBS        ON)
# SET(Boost_USE_MULTITHREADED      ON)
# SET(Boost_USE_STATIC_RUNTIME    OFF)


FIND_PACKAGE(Boost REQUIRED COMPONENTS graph)


ADD_SUBDIRECTORY(src)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A Graph interfafe to PostgreSQL")
SET(CPACK_PACKAGE_VENDOR "Pierre Marchand (Open Source Publishing), made.in")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/INSTALL")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")

SET(CPACK_PACKAGE_VERSION_MAJOR ${VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${VERSION_PATCH})
SET(CPACK_PACKAGE_EXECUTABLES "pg_graph")

INCLUDE(CPack)

