
AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_BINARY_DIR}
${LIBPQXX_INCLUDE_DIRS}
${Boost_INCLUDE_DIRS}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})


TARGET_LINK_LIBRARIES(${PROJECT_NAME}
${Boost_LIBRARIES}
${LIBPQXX_LIBRARIES}
)

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)


